2001-09-21 John R. Jackson (jrj@purdue.edu)

	* server-src/Makefile.am: Add -I../common-src so genversion.h can be
	  found (since it is built on the fly).  Only fails when build is done
	  in a different directory than the sources.

2001-09-17 John R. Jackson (jrj@purdue.edu)

	* server-src/getconf.c: Add capabilities to amgetconf to return
	  build environment values and also to open and close a debug file
	  (e.g. for scripts).
	* man/amgetconf.8.in: Ditto.
	* changer-src/chg-scsi.c: Ditto.
	* common-src/amanda.h: Ditto.
	* common-src/debug.c: Ditto.
	* common-src/error.c: Ditto.
	* server-src/dumper.c: Ditto.

2001-09-17 John R. Jackson (jrj@purdue.edu)

	* server-src/planner.c: Make sure we do not attempt to bump beyond
	  level 9.

2001-09-15 Thomas Hepper (th@ant.han.de)
	* changer-src/chg-scsi.c: Added new config option autoinv, 
	if not set no auto inventory will be done if the label db is out of 
	sync. Reworked MapBarCode, now the parameters are passed as a struct 
	and the result is returned in this struct (MBC_T), 
	also removed some duplicate/nonsens code from MapBarCode
	Changed the definitions for slot_file. It was used duplicate, 
	1. as the config file set by amanda.conf, and second set by the
	config option in the chg-scsi config file. Now the file from
	amanda.conf is called chg_scsi_conf. and changer_file is renamed 
	to slot_file.
	Added check if cleanfile is not set, if true clean_file is set to NULL
	Now return if tape_device is not in the range 0-9.
	Added some checks if we have all informations like slot_file, 
	devices etc. Fixed and error in the search function, 
	if the searched vol is already loaded return the correct info 
	and not 'label not found'. Fixed error in the parameter passing 
	to get_relative_slot. If the option was -slot last we where 
	1 above the end parameter..

	* changer-src/scsi-bsd.c: Fix compile problems.
	* changer-src/scsi-changer-driver.c: Fixed the last problems :-) 
	for the label/barcode handling...